--- a/client/components/toolbar/toolbar.css
+++ b/client/components/toolbar/toolbar.css
@@ -23,3 +23,8 @@
 .toolbar-controls .md-menu {
     padding:0;
 }
+
+.toolbar-controls .md-button.md-icon-button, .toolbar-controls .md-button {
+  line-height: 0;
+  min-height: 24px;
+}
