--- a/client/components/canvas-slate/canvas-slate.html
+++ b/client/components/canvas-slate/canvas-slate.html
@@ -1,5 +1,5 @@
 <div class="page-container">
     <div class="page" ng-controller="CanvasSlateCtrl">
-      <div slate  width="680" height="480" data-layers="layers"></div>
+      <div slate  width="680" height="480" data-layers="layers" data-set-up-tool="setUpTool"></div>
     </div>
 </div>
