--- a/client/components/toolbar/toolbar.html
+++ b/client/components/toolbar/toolbar.html
@@ -1,10 +1,11 @@
+<div ng-controller="toolbarCtrl">
 <md-toolbar class="md-menu-toolbar">
   <div layout="row">
     <md-toolbar-filler layout layout-align="center center">
       <md-icon md-svg-icon="/assets/svg/menu.svg"></md-icon>
     </md-toolbar-filler>
     <div>
-      <h2 class="md-toolbar-tools" contenteditable="true">Untitled document</h2>
+      <h2 class="md-toolbar-tools" ng-blur="saveTitle($event)" ng-keydown="writtingTitle($event)" contenteditable="{{ doc.policy.canWrite }}" ng-bind="doc.document.name"></h2>
       <md-menu-bar>
         <md-menu>
           <button ng-click="$mdOpenMenu()">
@@ -45,19 +46,19 @@
               </md-menu>
             </md-menu-item>
             <md-menu-item>
-              <md-button ng-click="ctrl.sampleAction('Open', $event)">
+              <md-button>
                 Open...
                 <span class="md-alt-text"></span>
               </md-button>
             </md-menu-item>
             <md-menu-item>
-              <md-button disabled="disabled" ng-click="ctrl.sampleAction('Rename', $event)">
+              <md-button>
                 Rename
               </md-button>
             </md-menu-item>
             <md-menu-divider></md-menu-divider>
             <md-menu-item>
-              <md-button ng-click="ctrl.sampleAction('Print', $event)">
+              <md-button>
                 Print
                 <span class="md-alt-text"></span>
               </md-button>
@@ -76,7 +77,7 @@
     </div>
   </div>
 </md-toolbar>
-<md-content ng-controller="toolbarCtrl">
+<md-content >
   <section layout="row" class="toolbar-controls" layout-sm="column" layout-align="left" layout-wrap>
     <md-button class="md-icon-button md-mini selected" aria-label="foreground Color picker">
       <div class="colorPicker" tinycolorpicker color-selected="foreground">
@@ -209,3 +210,4 @@
   </section>
 
 </md-content>
+</div>
