--- a/client/components/participant-list/participant-list.html
+++ b/client/components/participant-list/participant-list.html
@@ -3,6 +3,24 @@
         <md-toolbar class="md-theme-light">
             <h1 class="md-toolbar-tools">Participant List</h1>
         </md-toolbar>
+      <md-subheader class="md-no-sticky">Add friends</md-subheader>
+      <md-autocomplete
+        md-selected-item="selectedItem"
+        md-search-text-change="searchTextChange(searchText)"
+        md-search-text="searchText"
+        md-selected-item-change="selectedItemChange(item)"
+        md-items="item in querySearch(searchText)"
+        md-item-text="item.name"
+        md-min-length="3"
+        placeholder="Search friend by email(preferably) or name">
+        <md-item-template>
+          <span md-highlight-text="searchText" md-highlight-flags="^i">{{item.name}}</span>
+        </md-item-template>
+        <md-not-found>
+          No friends found matching "{{searchText}}".
+
+        </md-not-found>
+      </md-autocomplete>
         <md-divider></md-divider>
         <md-subheader class="md-no-sticky">Current friends:</md-subheader>
         <md-list-item>
