--- a/client/app/app.css
+++ b/client/app/app.css
@@ -122,3 +122,7 @@ a.md-button.md-no-alert, .md-button.md-no-alert {
   background: linear-gradient(to right, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe', GradientType=1 );
 }
+
+.autoWidth {
+  width:auto !important;
+}
