working on hub page

--- a/client/components/toolbar/toolbar.html
+++ b/client/components/toolbar/toolbar.html
@@ -177,7 +177,7 @@
       </md-menu-content>
     </md-menu>
     <md-menu>
-      <md-button aria-label="Open phone interactions menu" class="md-icon-button"
+      <md-button aria-label="Open layers interactions menu" class="md-icon-button"
                  ng-click="openMenu($mdOpenMenu, $event)">
         <md-icon md-menu-origin md-svg-icon="/assets/svg/layers.svg"></md-icon>
         <md-tooltip>
